

1.7.15
	Adoption by LGG
	Rebuild for 1.3.1

1.7.16
	Localization beta, thanks to forum user @CN_Warren
	Updated build scripts
	Added jenkins config
	Moved dll into Plugins folder

1.7.16.1
	Localization files were missing

1.7.16.2
	Updated localization file
	Split localizations into individual files
	Updated About url
	Updated check for correct path

1.7.16.3
	Added german translation, by github user @mwerle

1.7.16.4
	Added spanish translation, thanks to forum user @fitiales

1.7.16.5
	Updated spanish translated, release

1.7.17
	Updated for 1.4.1

1.7.17.1
	Added code to load textures manually, since Unity tries to compress them in the db

1.7.17.2
	Disabled cursor switching on Linux only

1.7.17.3
	Added dds to the file types to look for in icon image files
	Fixed fuzzy buttons

1.7.17.4
	Added back support for textures loaded by mods and not from a file


1.7.17.5
	Thanks to forum user @Jebs_SY, fixed an old, annoying but essentially harmless exception in the logs
		where the layout was changed between Layout and Repaint

1.7.17.6
	Removed log spam when textures are loaded by mod and not from a file

1.7.17.7
	Updated .version info for 1.4.*

1.7.17.8
	Fixed texture when file exists

1.7.17.9
	Fixed path check for texture

1.7.17.10
	Fixed nullref when in the MissionBuilder

1.7.17.11
	Added Portugese trnaslation, thanks @Brendo102x

1.7.17.12
	Version bump for 1.5 rebuild

1.7.17.13
	Version bump to fix .version file

1.7.17.14
	Thanks to github user @PiezPiedPy, fixes an exception which occurred before the MainMenu

1.7.18
	Minor change to add the ClickThroughBlocker

1.7.19
	Added unblur as a hard dependency
	Thanks to (github: @Cake-Pie, KSP: cakepie) for changes to both fix blurring and needless reading of the disk
	Removed the version check

1.7.19.1
	Minor update to version file

1.7.20
	Re-enabled the InstallChecker
	Added button scaling (currently on a per-screen basis)
	Added BigTexturePath for larger icons (better resolution)