@@ -7,7 +7,7 @@ rem GAMEDATA is the name of the local GameData
 rem VERSIONFILE is the name of the version file, usually the same as GAMEDATA,
 rem    but not always
 
-set H=%KSPDIR%
+set H=R:\KSP_1.7.3_dev
 set GAMEDIR=000_Toolbar
 set GAMEDATA="GameData\"
 set VERSIONFILE=Toolbar.version
