@@ -3,6 +3,7 @@
 1.7.15
 	Adoption by LGG
 	Rebuild for 1.3.1
+	Added Startup class
 
 1.7.16
 	Localization beta, thanks to forum user @CN_Warren
